--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 memo.md
+
+### npm ###
+node_modules
+
+# Created by https://www.gitignore.io
+
+### Bower ###
+bower_components
+.bower-cache
+.bower-registry
+.bower-tmp
+
