--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "knock-sample",
   "version": "1.0.0",
+  "scripts": {
+    "server": "wzrd src/index.coffee:public/bundle.js -- -t [ coffeeify --extension='.coffee' ] -t debowerify --extension='.coffee'",
+    "build": "browserify -t [ coffeeify --extension='.coffee' ] -t debowerify -o public/bundle.js src/index.coffee",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "devDependencies": {
     "coffeeify": "^1.0.0",
     "debowerify": "^1.2.0"
