--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "knock-sample",
   "version": "1.0.0",
   "scripts": {
-    "server": "wzrd src/index.coffee:public/bundle.js -- -t [ coffeeify --extension='.coffee' ] -t debowerify --extension='.coffee'",
-    "build": "browserify -t [ coffeeify --extension='.coffee' ] -t debowerify -o public/bundle.js src/index.coffee",
+    "server": "wzrd src/index.coffee:public/bundle.js -- --extension='.coffee' -t coffeeify -t debowerify",
+    "build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "coffee-script": "^1.9.1",
     "coffeeify": "^1.0.0",
-    "debowerify": "^1.2.0"
+    "debowerify": "^1.2.0",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.0",
+    "gulp-uglify": "^1.1.0",
+    "vinyl-transform": "^1.0.0",
+    "wzrd": "^1.2.1"
   }
 }
