TODOリスト機能を追加     タスクの追加、削除     日付管理のためにmoment入れたけどまだなにもしてない

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "knockout": "3.3.0",
     "jquery": "1.11.2",
-    "lodash": "3.2.0"
+    "lodash": "3.2.0",
+    "moment": "~2.9.0"
   }
 }
