--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "coffeeify": "^1.0.0",
     "debowerify": "^1.2.0",
     "gulp": "^3.8.11",
-    "gulp-concat": "^2.5.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.1.0",
+    "gulp-watch": "^4.1.1",
     "vinyl-transform": "^1.0.0",
     "wzrd": "^1.2.1"
   }
