--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "brfs": "^1.3.0",
     "coffee-script": "^1.9.1",
     "coffeeify": "^1.0.0",
     "debowerify": "^1.2.0",
