--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "coffee-script": "^1.9.1",
     "coffeeify": "^1.0.0",
     "debowerify": "^1.2.0",
+    "espower-coffee": "^0.10.0",
     "gulp": "^3.8.11",
+    "gulp-mocha": "^2.0.0",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.1",
-    "vinyl-transform": "^1.0.0",
-    "wzrd": "^1.2.1"
+    "mocha": "^2.1.0",
+    "phantomjs": "^1.9.15",
+    "power-assert": "^0.10.2",
+    "vinyl-transform": "^1.0.0"
   }
 }
