テストでもbowerをrequireできるように
hello的なテストは通ったけど、require 'Todo'すると
module momentが見つからないと言われた。

browserifyする必要がありそうだったので、gulpfileを書き換え。
espower-coffeeはcoffeeify→debowerifyの流れを崩すのでクビにして（元から
ベータだった不安もあり）、gulp-espowerに変更した。

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "coffee-script": "^1.9.1",
     "coffeeify": "^1.0.0",
     "debowerify": "^1.2.0",
-    "espower-coffee": "^0.10.0",
     "gulp": "^3.8.11",
+    "gulp-espower": "^0.10.0",
     "gulp-mocha": "^2.0.0",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
