--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "knock-sample",
   "version": "1.0.0",
+  "scripts": {
+    "test": "./node_modules/.bin/gulp test"
+  },
   "devDependencies": {
     "brfs": "^1.3.0",
     "coffee-script": "^1.9.1",
@@ -16,6 +19,7 @@
     "mocha": "^2.1.0",
     "phantomjs": "^1.9.15",
     "power-assert": "^0.10.2",
+    "sinon": "^1.12.2",
     "vinyl-transform": "^1.0.0"
   }
 }
