--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   },
   "devDependencies": {
     "brfs": "^1.3.0",
+    "browserify": "^9.0.3",
     "coffee-script": "^1.9.1",
     "coffeeify": "^1.0.0",
     "debowerify": "^1.2.0",
+    "glob": "^4.4.0",
     "gulp": "^3.8.11",
     "gulp-espower": "^0.10.0",
     "gulp-mocha": "^2.0.0",
@@ -20,6 +22,9 @@
     "phantomjs": "^1.9.15",
     "power-assert": "^0.10.2",
     "sinon": "^1.12.2",
-    "vinyl-transform": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0"
+  },
+  "dependencies": {
+    "request-promise": "^0.4.0"
   }
 }
