--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "brfs": "^1.3.0",
     "browserify": "^9.0.3",
+    "codeclimate-test-reporter": "0.0.4",
     "coffee-script": "^1.9.1",
     "coffeeify": "^1.0.0",
     "debowerify": "^1.2.0",
@@ -18,6 +19,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.1",
+    "istanbul": "^0.3.6",
     "mocha": "^2.1.0",
     "phantomjs": "^1.9.15",
     "power-assert": "^0.10.2",
